- have 2 separate canvas, one for showing what was drawn so far (mainCanvas), and other to show what is being drawn (drawCanvas - once you stop drawing a line, it is then drawn to the main canvas)     - this fixes the problem with drawing lines with opacity, that would have lines constantly overlapping (so you wouldn't see the opacity correctly) - add a menu block to select between the different brushes

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,13 @@ body
     flex: 1;
     }
 
+#drawCanvas
+    {
+    position: absolute;
+    top: 0;
+    left: 0;
+    }
+
 
 .button
     {
